[gd_scene load_steps=2 format=3 uid="uid://c1fahaip3uwgq"]

[ext_resource type="Script" uid="uid://x4rp1r7pakd6" path="res://scenes/settings_menu/tabs/controls_tab.gd" id="1_unoo2"]

[node name="ControlsTab" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_unoo2")

[node name="ContentVBox" type="VBoxContainer" parent="."]
layout_mode = 0

[node name="TitleLabel" type="Label" parent="ContentVBox"]
custom_minimum_size = Vector2(1920, 0)
layout_mode = 2
text = "Управление"
horizontal_alignment = 1

[node name="DescLabel" type="Label" parent="ContentVBox"]
custom_minimum_size = Vector2(1920, 0)
layout_mode = 2
text = "Нажмите на клавишу, чтобы изменить её назначение."
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ContentVBox"]
custom_minimum_size = Vector2(1920, 0)
layout_mode = 2

[node name="ActionsHeaderLabel" type="Label" parent="ContentVBox/HBoxContainer"]
layout_mode = 2
text = "Действия"

[node name="KeysHeaderLabel" type="Label" parent="ContentVBox/HBoxContainer"]
layout_mode = 2
text = "Клавиши"

[node name="ContentVBox" type="VBoxContainer" parent="ContentVBox"]
custom_minimum_size = Vector2(1200, 100)
layout_mode = 2

[node name="HeadersHBox" type="HBoxContainer" parent="ContentVBox/ContentVBox"]
layout_mode = 2

[node name="KeysContainer" type="VBoxContainer" parent="ContentVBox"]
layout_mode = 2

[node name="HintLabel" type="Label" parent="ContentVBox"]
layout_mode = 2
text = "Нажмите ESC, чтобы отменить переназначение клавиши"
horizontal_alignment = 1
